# QKrakenCpp

./: .gitignore  CMakeLists.txt  KrakenJsonParser.cpp  KrakenJsonParser.h  QKrakenCpp.cpp  QKrakenCpp.h  QKrakenCpp_global.h  README.md  Structures.h  TSNetworkManager.cpp  TSNetworkManager.h
include/QKrakenCpp/: KrakenJsonParser.h  QKrakenCpp.h  Structures.h
src/: KrakenJsonParser.cpp  QKrakenCpp.cpp  TSNetworkManager.cpp
